# 188finalproject

./: .gitignore  README.md
.github/workflows/: build_and_deploy.yaml
cron/: Dockerfile  pyproject.toml
k8s/: config.yaml  cron.yaml  cronjob.yaml  logs.yaml  postgres.yaml  storage.yaml  web.yaml
k8s-local/: config.yaml  cron.yaml  logs.yaml  postgres.yaml  redis.yaml  storage.yaml  web.yaml
source/cron/: __init__.py  main.py
source/db/: __init__.py
source/db/models/: monitor.py  target.py  user.py
source/web/: __init__.py  auth.py  config.py  main.py  monitors.py
web/: Dockerfile  pyproject.toml  test_main.py
